--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Siddharth Kalyani's Portfolio Website made using React js"
+      content="Banti Portfolio Website made using React js"
     />
     <link rel="apple-touch-icon" href="logo1.jpg" />
     <!--
