--- a/index2.html
+++ b/index2.html
@@ -12,22 +12,22 @@
   <meta name="description" content="Self Developed personal portfolio website built with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="P Banti | Portfolio App 📱">
+  <meta itemprop="name" content="P Banti | Portfolio App ">
   <meta itemprop="description" content="Self Developed personal website built with React.js">
   <meta itemprop="image"
     content="#">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://siddharthkalyani.in">
+  <meta property="og:url" content="https://banti067.github.io/react-webfolio/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="P Banti | Portfolio App 📱">
+  <meta property="og:title" content="P Banti | Portfolio App ">
   <meta property="og:description" content="Self Developed Personal Website Built with React.js">
   <meta property="og:image"
     content="#">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="P Banti | Portfolio App 📱">
+  <meta name="twitter:title" content="P Banti | Portfolio App ">
   <meta name="twitter:description" content="Self Developed Personal Website Built with React.js">
   <meta name="twitter:image"
     content="#">
